# frais

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO  TODO.md  logging_fix_plan.md  pyproject.toml  python_engineering_spec_strict.md
docs/: architecture_refactor_plan.md
scripts/: build_binary.py  checkupgrade_entry.py  frais.sh  frais_entry.py  hook-checkupgrade.py  hook-frais.py  hook-mise.py  mise_entry.py
src/checkupgrade/: __init__.py  agent.py  cli.py  config.py  ignore.py  models.py  research.py  tools.py  version_checker.py
src/checkupgrade/plugins/: __init__.py  _utils.py  base.py  config.py  homebrew.py  registry.py
src/checkupgrade/plugins/applications/: __init__.py
src/checkupgrade/plugins/homebrew/: __init__.py
src/checkupgrade/plugins/npm/: __init__.py
src/checkupgrade/scanners/: __init__.py  applications.py
src/frais/: __init__.py  agent.py  cli.py  config.py  coordinator.py  ignore.py  ignore_filter.py  llm.py  logging_config.py  models.py  paths.py  providers.py  summarize.py  system.py  tools.py  version_checker.py  web_tools.py
src/frais/commands/: __init__.py  _output.py  _scan_core.py  _signal.py  advise.py  config.py  doctor.py  ignore.py  plugins.py  scan.py  summarize.py  update.py
src/frais/llm/: __init__.py  _anthropic.py  _base.py  _deepseek.py  _mimo.py  _openai_compatible.py
src/frais/plugins/: __init__.py  base.py  config.py  registry.py  subprocess_json.py
src/frais/plugins/applications/: __init__.py  _research.py  _store.py  app_store.py  discovery.py  plugin.py  source_classifier.py
src/frais/plugins/applications/research/: __init__.py  candidate_factory.py  json_parser.py  pipeline.py  prompts.py  version_compare.py
src/frais/plugins/homebrew/: __init__.py  plugin.py
src/frais/plugins/npm/: __init__.py  plugin.py
src/frais/store/: config_store.py  ignore_store.py  plugin_store.py  scan_cache.py
src/frais/ui/: __init__.py  scan_progress.py
src/mise/: __init__.py  cli.py  config.py  ignore.py  research.py  tools.py
src/mise/plugins/: __init__.py  config.py  registry.py
tests/: test_agent.py  test_applications.py  test_cli.py  test_commands.py  test_config.py  test_coverage.py  test_homebrew.py  test_ignore.py  test_llm.py  test_models.py  test_npm.py  test_output.py  test_plugins_config.py  test_research.py  test_tools.py  test_version_checker.py
tests/integration/cli/: test_cli.py  test_tools.py
tests/unit/: test_edge_cases.py  test_models.py  test_version_checker.py
tests/unit/commands/: test_commands.py  test_config.py  test_output.py
tests/unit/llm/: test_llm.py  test_mimo.py
tests/unit/plugins/: test_homebrew.py  test_npm.py  test_research.py
tests/unit/store/: test_ignore.py
