[project]
name = "mise"
version = "0.1.0"
description = "Agent CLI for checking macOS application and Homebrew updates."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ddgs>=6.0.0",
  "httpx>=0.27.0",
  "packaging>=24.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
build = [
  "pyinstaller>=6.0.0",
]

[project.scripts]
mise = "mise.cli:app"

[project.entry-points."mise.plugins"]
applications = "mise.plugins.applications:ApplicationsPlugin"
homebrew = "mise.plugins.homebrew:HomebrewPlugin"
npm = "mise.plugins.npm:NpmPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
