[project]
name = "frais"
version = "0.1.0"
description = "Agent CLI for checking macOS application and Homebrew updates."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "ddgs>=6.0.0",
  "httpx>=0.27.0",
  "packaging>=24.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
build = [
  "pyinstaller>=6.0.0",
]

[project.scripts]
frais = "frais.cli:app"

[project.entry-points."frais.plugins"]
applications = "frais.plugins.applications:ApplicationsPlugin"
homebrew = "frais.plugins.homebrew:HomebrewPlugin"
npm = "frais.plugins.npm:NpmPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
